# cheops

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  THANKS  cheops.spec  configure.ac  configure.in
doc/: Makefile.am  cheops.6  cheops.tex
src/: ChessBoard.cpp  ChessBoard.h  ChessTypes.h  ComputerPlayer.cpp  ComputerPlayer.h  HumanPlayer.cpp  HumanPlayer.h  Makefile  Makefile.am  Player.cpp  Player.h  StdAfx.cpp  cheops.cpp  move.cpp  move.h  stdafx.h
www/: .htaccess  index.html
