#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#
# $Id$

AC_PREREQ(2.57)
AC_INIT(CHEOPS, 1.2, psychonaut@nothingisreal.com, cheops)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/ChessTypes.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
