# $Id$
#
# Copyright (C) 2003 Tristan Miller <psychonaut@nothingisreal.com>
#  
# This file is free software; the author gives unlimited permission to
# copy and/or distribute it, with or without modifications.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even
# the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE.

bin_PROGRAMS = cheops
cheops_SOURCES = cheops.cpp ChessBoard.cpp ComputerPlayer.cpp HumanPlayer.cpp move.cpp Player.cpp StdAfx.cpp ChessBoard.h ChessTypes.h ComputerPlayer.h HumanPlayer.h move.h Player.h stdafx.h
